Polished BasicCollectors